versioned_docs/version-0.4.3/reference/model/units.md
---
title: "units"
linkTitle: "units"
type: "docs"
description: units system module - Unit handlers
weight: 100
---
## Constants

- Fixed point unit constants: `n`, `u`, `m`, `k`, `K`, `G`, `T` and `P`.
- Power of 2 unit constants: `Ki`, `Mi`, `Gi`, `Ti` and `Pi`.

## Functions

- `to_n(num: int) -> str`
  Int literal to string with `n` suffix
- `to_u(num: int) -> str`
  Int literal to string with `u` suffix
- `to_m(num: int) -> str`
  Int literal to string with `m` suffix
- `to_K(num: int) -> str`
  Int literal to string with `K` suffix
- `to_M(num: int) -> str`
  Int literal to string with `M` suffix
- `to_G(num: int) -> str`
  Int literal to string with `G` suffix
- `to_T(num: int) -> str`
  Int literal to string with `T` suffix
- `to_P(num: int) -> str`
  Int literal to string with `P` suffix
- `to_Ki(num: int) -> str`
  Int literal to string with `Ki` suffix
- `to_Mi(num: int) -> str`
  Int literal to string with `Mi` suffix
- `to_Gi(num: int) -> str`
  Int literal to string with `Gi` suffix
- `to_Ti(num: int) -> str`
  Int literal to string with `Ti` suffix
- `to_Pi(num: int) -> str`
  Int literal to string with `Pi` suffix
